# yatbcpp-macos

./: .travis.yml  CMakeLists.txt  INSTALL.MD  LICENSE  README.MD  yatbcpp.h
CMake/: check_compilers.cmake  check_librequirements.cmake  files_cxx.cmake  files_header.cmake  findpackage.cmake  install.cmake  version.cmake  yatbcppConfig.cmake.in
inc/: Bot.h  Token.h
inc/bot/: Bot.h  Token.h
inc/exceptions/: curl_error.h  essential_key_missing.h  exceptions.h  file_not_found.h  telegram_api_error.h
inc/methods/: answerInlineQuery.h  forwardMessage.h  getMe.h  methods.h  sendAudio.h  sendDocument.h  sendLocation.h  sendMessage.h  sendPhoto.h  sendVideo.h  sendVoice.h  telegram_method.h  telegram_methodJSON.h  telegram_methodMultipart.h  telegram_simplemethodJSON.h
inc/types/: Audio.h  Chat.h  ChatMember.h  ChatPhoto.h  Contact.h  Document.h  File.h  ForceReply.h  InlineQuery.h  InlineQueryResult.h  InlineQueryResultCachedAudio.h  InlineQueryResultCachedVoice.h  InputMessageContent.h  KeyboardButton.h  Location.h  Message.h  MessageEntity.h  PhotoSize.h  ReplyKeyboardMarkup.h  ReplyKeyboardRemove.h  ReplyMarkup.h  Update.h  User.h  UserProfilePhotos.h  Venue.h  Video.h  VideoNote.h  Voice.h  chat_type.h  chatmember_status.h  sendMessage.h  telegram_type.h  types.h
src/: Bot.cc  Token.cc
src/bot/: Bot.cc  Token.cc
src/exceptions/: curl_error.cc  essential_key_missing.cc  file_not_found.cc  telegram_api_error.cc
src/methods/: answerInlineQuery.cc  forwardMessage.cc  getMe.cc  sendAudio.cc  sendDocument.cc  sendLocation.cc  sendMessage.cc  sendPhoto.cc  sendVideo.cc  sendVoice.cc
src/ostream/: User_ostream.cc  curl_error_ostream.cc  exception_essential_key_missing_ostream.cc  exception_file_not_found_ostream.cc  telegram_api_error_ostream.cc
src/types/: Audio.cc  Chat.cc  ChatMember.cc  ChatPhoto.cc  Contact.cc  Document.cc  File.cc  ForceReply.cc  InlineQuery.cc  InlineQueryResult.cc  InlineQueryResultCachedAudio.cc  InlineQueryResultCachedVoice.cc  KeyboardButton.cc  KeyboardLocation.cc  Location.cc  Message.cc  MessageEntity.cc  PhotoSize.cc  ReplyKeyboardMarkup.cc  ReplyKeyboardRemove.cc  Update.cc  User.cc  UserProfilePhotos.cc  Venue.cc  Video.cc  VideoNote.cc  Voice.cc  sendMessage.cc
src/types_fromJson/: Audio_fromJson.cc  ChatMember_fromJson.cc  ChatPhoto_fromJson.cc  Chat_fromJson.cc  Contact_fromJson.cc  Document_fromJson.cc  File_fromJson.cc  InlineQuery_fromJson.cc  KeyboardButton_fromJson.cc  Location_fromJson.cc  MessageEntity_fromJson.cc  Message_fromJson.cc  PhotoSize_fromJson.cc  ReplyKeyboardMarkup_fromJson.cc  Update_fromJson.cc  UserProfilePhotos_fromJson.cc  User_fromJson.cc  Venue_fromJson.cc  VideoNote_fromJson.cc  Video_fromJson.cc  Voice_fromJson.cc
src/types_fromString/: chat_type.cc  chatmember_status.cc
